# dkr-recomp

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DKR_MILESTONES.md  PATCHES.md  README.md  dkr.us.v80.syms.toml  dkr.us.v80.toml  gamecontrollerdb-extra.txt  launch.vs.json  rsp-aspMain.toml  rsp-f3ddkr-dram.toml  rsp-f3ddkr-fifo.toml  rsp-f3ddkr-xbus.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: source-checks.yml
assets/: FONTS.md  OFL-1.1.txt  launcher.rml  recomp.rcss
assets/config_menu/: debug.rml  general.rml  graphics.rml
assets/scss/styles/components/: Launcher.scss
assets/scss/styles/mixins/: _typography.scss
deploy/: io.github.cyscott.dkrrecomp.desktop  io.github.cyscott.dkrrecomp.metainfo.xml
deploy/appimage/: AppRun  build.sh
docs/: AI_ASSISTANCE.md  ARCHITECTURE.md  KNOWN_ISSUES.md  TESTING.md  UPSTREAMING.md
scripts/: apply-submodule-patches.sh  build-steamdeck-appimage.sh  check-public-tree.sh  generate-recomp.sh  package-macos-dependencies.sh  prepare-input.sh  profile-steamdeck-linux-vulkan.sh  smoke-test-steamdeck-appimage.sh  steamdeck-builder.Dockerfile
src/: main.cpp
src/common/: sdl.hpp
src/config/: config.cpp  config.hpp
src/debug_ui/: backend.cpp  backend.hpp  debug_ui.cpp  debug_ui.hpp
src/input/: controls.cpp  input.cpp  input.hpp
src/recomp_api/: animation.cpp  debug.cpp  debug_ui_api.cpp  dll.cpp  fastcopy.cpp  func_8001B4F0_hack.cpp  general_api.cpp  hardware.cpp  music_animation.cpp  pak.cpp  recomp_data_api.cpp
src/renderer/: hooks.cpp  renderer.cpp  renderer.hpp
src/runtime/: audio.cpp  audio.hpp  crash.cpp  crash.hpp  gfx.cpp  gfx.hpp  preload.cpp  preload.hpp  rom_patcher.cpp  rom_patcher.hpp  rsp.cpp  support.cpp
src/ui/: recomp_ui.h  recompui_event_bridge.h  ui_api_events.cpp  ui_config.cpp  ui_launcher.cpp  ui_mod_menu.cpp  ui_prompt.cpp  ui_renderer.cpp  ui_renderer.h  ui_state.cpp
src/ui/core/: ui_context.cpp
src/ui/elements/: ui_types.h
submodule-patches/: n64modernruntime-dkr.patch  n64recomp-dkr.patch  plume-sdl2-compat.patch  rt64-f3ddkr.patch
tools/: symbolize_linux_backtrace.py
